# gaugo

./: .gitignore  Makefile.am  README.md  configure.ac  configureDebug.sh  configureRelease.sh  doxygen.cfg
src/: Makefile.am
src/gauGoCore/: GTPArchiving.c  GTPArchiving.h  GTPBasicCommands.c  GTPBasicCommands.h  GTPBench.c  GTPBench.h  GTPGogui.c  GTPGogui.h  GTPPatterns.c  GTPPatterns.h  GTPSynching.c  GTPSynching.h  GTPTest.c  GTPTest.h  Makefile.am  board.c  board.h  board_zobrist.c  board_zobrist.h  crash.c  crash.h  emptiesList.c  emptiesList.h  gauGo2p.c  gauGoEngine.c  gauGoEngine.h  gauGoMain.c  gauHbuilder.c  global_defs.h  hashTable.c  hashTable.h  hfeatures.c  hfeatures.h  memoryPool.c  memoryPool.h  options.c  options.h  p3x3info.h  policies.h  policy_pureRandom.c  (+11 more)
src/gnugo/: Makefile.am
src/gnugo/sgf/: Makefile.am  gg_utils.c  sgfnode.c
